# Bolt-V2

./: .gitignore  Bolt.cpp  CMakeLists.txt  README.md
Client/: CMakeLists.txt  Client.cpp  Client.h
Client/Bolt/: CMakeLists.txt  Manager.cpp  Manager.h
Client/Bolt/Category/: CMakeLists.txt  Category.cpp  Category.h
Client/Bolt/Hook/: CMakeLists.txt  Hook.cpp  Hook.h
Client/Bolt/Hook/Hooks/: CMakeLists.txt
Client/Bolt/Module/: CMakeLists.txt  Module.cpp  Module.h
Client/Bolt/Module/Combat/: CMakeLists.txt  Criticals.cpp  Criticals.h  Hitbox.cpp  Hitbox.h  Killaura.cpp  Killaura.h
Client/Bolt/Module/Movement/: CMakeLists.txt  Jetpack.cpp  Jetpack.h  NoSlow.cpp  NoSlow.h  Step.cpp  Step.h  Twerk.cpp  Twerk.h
Client/Bolt/Module/Other/: CMakeLists.txt  (+6 more)
Client/SDK/: CMakeLists.txt  Minecraft.cpp  Minecraft.h
Client/SDK/Classes/: Actor.cpp  Actor.h  CMakeLists.txt  ClientInstance.cpp  ClientInstance.h  Dimension.h  GameMode.h  GuiData.h  Inventory.h  Level.cpp  Level.h  LoopbackPacketSender.h  MinecraftGame.cpp  MinecraftGame.h  MinecraftUIRenderContext.cpp  MinecraftUIRenderContext.h  Packet.cpp  Packet.h  Player.cpp  Player.h  PlayerInventory.h  Weather.h
Client/Util/: CMakeLists.txt  Util.cpp  Util.h
Client/Utils/: CMakeLists.txt  RenderUtils.cpp  RenderUtils.h  Utils.cpp  Utils.h
Client/Utils/Fonts/: DroidSans.hpp
Includes/: CMakeLists.txt
Includes/GitClone/: CMakeLists.txt  GitUtils.cmake
Includes/imgui/: CMakeLists.txt  DancingScript.hpp  DejaVuSerif.hpp  DroidSans.hpp  Minecraft.hpp  QuickSand.hpp
Includes/kiero/: CMakeLists.txt  kiero.h
(+37 files in other folders)
